--- a/assets/css/Jumbotron-Main.css
+++ b/assets/css/Jumbotron-Main.css
@@ -1,11 +1,12 @@
 div.jumbotron.alaska-travel {
     color: #fff;
     text-align: center;
-    /*background: url('hero-background-travel.jpg');*/
     background-size: cover;
     background-position: center;
     padding-top: 100px;
     padding-bottom: 125px;
+    background-color: #fff; 
+    padding: auto 0px
 }
 
 h1.jumbo-title,
@@ -13,10 +14,16 @@ h2.jumbo-title,
 h3.jumbo-title {
     text-shadow: 0 3px 3px rgba(0, 0, 0, 0.4);
     color: #fff;
+    font-family: Amaranth, sans-serif;
+    color: rgb(19, 0, 81)
 }
 
 p.jumbo-subtitle {
     max-width: 600px;
     margin: 25px auto;
-    color: #544e4e;
+    color: #e3bbbb;
+    font-family: Amaranth, sans-serif
+}
+h4.jumbo-subtitle{
+    color: rgb(19, 0, 81);
 }
